bug 884251 - DocAccessible::UpdateTree() doesn't need to handle updating children that are sub documents r=surkov